@@ -69,6 +69,40 @@
 		<property name="select" type="bool" help="Select Page when Adding">0</property>
 	</objectinfo>
 
+	<objectinfo class="wxAuiNotebook" icon="auinotebook.xpm" type="auinotebook">
+		<inherits class="wxWindow" />
+		<property name="name" type="text">m_auinotebook</property>
+		<property name="style" type="bitlist">
+			<option name="wxAUI_NB_DEFAULT_STYLE"  help="Defined as wxAUI_NB_TOP | wxAUI_NB_TAB_SPLIT | wxAUI_NB_TAB_MOVE | wxAUI_NB_SCROLL_BUTTONS | wxAUI_NB_CLOSE_ON_ACTIVE_TAB." />
+			<option name="wxAUI_NB_TAB_SPLIT"  help="Allows the tab control to be split by dragging a tab." />
+			<option name="wxAUI_NB_TAB_MOVE"  help="Allows a tab to be moved horizontally by dragging." />
+			<option name="wxAUI_NB_TAB_EXTERNAL_MOVE"  help="Allows a tab to be moved to another tab control." />
+			<option name="wxAUI_NB_TAB_FIXED_WIDTH"  help="With this style, all tabs have the same width." />
+			<option name="wxAUI_NB_SCROLL_BUTTONS"  help="With this style, left and right scroll buttons are displayed." />
+			<option name="wxAUI_NB_WINDOWLIST_BUTTON"  help="With this style, a drop-down list of windows is available." />
+			<option name="wxAUI_NB_CLOSE_BUTTON"  help="With this style, a close button is available on the tab bar." />
+			<option name="wxAUI_NB_CLOSE_ON_ACTIVE_TAB"  help="With this style, the close button is visible on the active tab." />
+			<option name="wxAUI_NB_CLOSE_ON_ALL_TABS"  help="With this style, the close button is visible on all tabs." />
+			wxAUI_NB_DEFAULT_STYLE
+		</property>
+		<property name="tab_ctrl_height" type="int" help="Sets the tab height. By default, the tab control height is calculated by measuring the text height and bitmap sizes on the tab captions. Calling this method will override that calculation and set the tab control to the specified height parameter. A call to this method will override any call to SetUniformBitmapSize(). Specifying -1 as the height will return the control to its default auto-sizing behaviour.">-1</property>
+		<property name="uniform_bitmap_size" type="wxSize" help="SetUniformBitmapSize() ensures that all tabs will have the same height, even if some tabs don't have bitmaps. Passing wxDefaultSize to this function will instruct the control to use dynamic tab height, which is the default behaviour. Under the default behaviour, when a tab with a large bitmap is added, the tab control's height will automatically increase to accommodate the larger bitmap."/>
+		<event name="OnAuiNotebookPageClose" class="wxAuiNotebookEvent" help="The page was closed." />
+		<event name="OnAuiNotebookPageChanged" class="wxAuiNotebookEvent" help="The page selection was changed."/>
+		<event name="OnAuiNotebookPageChanging" class="wxAuiNotebookEvent" help="The page selection is changing."/>
+		<event name="OnAuiNotebookButton" class="wxAuiNotebookEvent" help=""/>
+		<event name="OnAuiNotebookBeginDrag" class="wxAuiNotebookEvent" help=""/>
+		<event name="OnAuiNotebookEndDrag" class="wxAuiNotebookEvent" help=""/>
+		<event name="OnAuiNotebookDragMotion" class="wxAuiNotebookEvent" help=""/>
+		<event name="OnAuiNotebookAllowDND" class="wxAuiNotebookEvent" help="This event must be overridden to allow drag'n'drop among wxAuiNotebooks."/>
+	</objectinfo>
+    
+	<objectinfo class="auinotebookpage" icon="auinotebook.xpm" type="auinotebookpage">
+		<property name="label" type="wxString_i18n">a page</property>
+		<property name="bitmap" type="bitmap" help="Page Image"/>
+		<property name="select" type="bool" help="Select Page when Adding">0</property>
+	</objectinfo>
+	
 	<objectinfo class="wxListbook" icon="listbook.xpm" type="listbook">
 		<inherits class="wxWindow" />
 		<property name="name" type="text">m_listbook</property>
@@ -104,40 +138,6 @@
 
 	<objectinfo class="choicebookpage" icon="choicebook.xpm" type="choicebookpage">
 		<property name="label" type="wxString_i18n">a page</property>
-		<property name="select" type="bool" help="Select Page when Adding">0</property>
-	</objectinfo>
-	
-	<objectinfo class="wxAuiNotebook" icon="auinotebook.xpm" type="auinotebook">
-		<inherits class="wxWindow" />
-		<property name="name" type="text">m_auinotebook</property>
-		<property name="style" type="bitlist">
-			<option name="wxAUI_NB_DEFAULT_STYLE"  help="Defined as wxAUI_NB_TOP | wxAUI_NB_TAB_SPLIT | wxAUI_NB_TAB_MOVE | wxAUI_NB_SCROLL_BUTTONS | wxAUI_NB_CLOSE_ON_ACTIVE_TAB." />
-			<option name="wxAUI_NB_TAB_SPLIT"  help="Allows the tab control to be split by dragging a tab." />
-			<option name="wxAUI_NB_TAB_MOVE"  help="Allows a tab to be moved horizontally by dragging." />
-			<option name="wxAUI_NB_TAB_EXTERNAL_MOVE"  help="Allows a tab to be moved to another tab control." />
-			<option name="wxAUI_NB_TAB_FIXED_WIDTH"  help="With this style, all tabs have the same width." />
-			<option name="wxAUI_NB_SCROLL_BUTTONS"  help="With this style, left and right scroll buttons are displayed." />
-			<option name="wxAUI_NB_WINDOWLIST_BUTTON"  help="With this style, a drop-down list of windows is available." />
-			<option name="wxAUI_NB_CLOSE_BUTTON"  help="With this style, a close button is available on the tab bar." />
-			<option name="wxAUI_NB_CLOSE_ON_ACTIVE_TAB"  help="With this style, the close button is visible on the active tab." />
-			<option name="wxAUI_NB_CLOSE_ON_ALL_TABS"  help="With this style, the close button is visible on all tabs." />
-			wxAUI_NB_DEFAULT_STYLE
-		</property>
-		<property name="tab_ctrl_height" type="int" help="Sets the tab height. By default, the tab control height is calculated by measuring the text height and bitmap sizes on the tab captions. Calling this method will override that calculation and set the tab control to the specified height parameter. A call to this method will override any call to SetUniformBitmapSize(). Specifying -1 as the height will return the control to its default auto-sizing behaviour.">-1</property>
-		<property name="uniform_bitmap_size" type="wxSize" help="SetUniformBitmapSize() ensures that all tabs will have the same height, even if some tabs don't have bitmaps. Passing wxDefaultSize to this function will instruct the control to use dynamic tab height, which is the default behaviour. Under the default behaviour, when a tab with a large bitmap is added, the tab control's height will automatically increase to accommodate the larger bitmap."/>
-		<event name="OnAuiNotebookPageClose" class="wxAuiNotebookEvent" help="The page was closed." />
-		<event name="OnAuiNotebookPageChanged" class="wxAuiNotebookEvent" help="The page selection was changed."/>
-		<event name="OnAuiNotebookPageChanging" class="wxAuiNotebookEvent" help="The page selection is changing."/>
-		<event name="OnAuiNotebookButton" class="wxAuiNotebookEvent" help=""/>
-		<event name="OnAuiNotebookBeginDrag" class="wxAuiNotebookEvent" help=""/>
-		<event name="OnAuiNotebookEndDrag" class="wxAuiNotebookEvent" help=""/>
-		<event name="OnAuiNotebookDragMotion" class="wxAuiNotebookEvent" help=""/>
-		<event name="OnAuiNotebookAllowDND" class="wxAuiNotebookEvent" help="This event must be overridden to allow drag'n'drop among wxAuiNotebooks."/>
-	</objectinfo>
-    
-	<objectinfo class="auinotebookpage" icon="auinotebook.xpm" type="auinotebookpage">
-		<property name="label" type="wxString_i18n">a page</property>
-		<property name="bitmap" type="bitmap" help="Page Image"/>
 		<property name="select" type="bool" help="Select Page when Adding">0</property>
 	</objectinfo>
     
